K8s/Ingress/chat-ingress.yml
# chat-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chat-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    # cert-manager.io/cluster-issuer: letsencrypt-http
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/websocket-services: "chat-backend"
spec:
  ingressClassName: nginx
  # tls:
  # - hosts:
  #     - mahadsapp.duckdns.org
  #   secretName: chat-tls
  rules:
  - host: mahadsapp.duckdns.org
    http:
      paths:
      # 1) Backend API & WebSocket under /api and /socket.io
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: chat-backend
            port:
              number: 8000

      - path: /socket.io
        pathType: ImplementationSpecific
        backend:
          service:
            name: chat-backend
            port:
              number: 8000

      # 2) Everything else → frontend
      - path: /
        pathType: Prefix
        backend:
          service:
            name: chat-frontend
            port:
              number: 5173
